[package]
name = "secure-vault"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A secure file encryption/decryption tool with modern cryptography"
license = "MIT"
repository = "https://github.com/yourusername/secure-vault"
keywords = ["encryption", "security", "cryptography", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Cryptography
ring = "0.17"
argon2 = "0.5"
zeroize = "1.7"
rand = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
rpassword = "7.3"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
